ncc/testsuite/positive/Issue-1008.n
using System;
using System.Console;
using System.Collections.Generic;

class A
{
  public F() : IEnumerator[int]
  {
    try {}
    finally { _ = this };
    yield 1;
    yield 2;
  }
  
  public G() : IEnumerable[string]
  {
    try {}
    finally { _ = this };
    yield "a";
    yield "b";
  }
}

module Program
{
  Main() : void
  {
    def a = A();
    
    using (x = a.F())
    {
      while (x.MoveNext())
        WriteLine(x.Current);
    }
    
    foreach (v in a.G())
      WriteLine(v);
  }
}

/*
BEGIN-OUTPUT
1
2
a
b
END-OUTPUT
*/